Fixed text alignment in recipe cards

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -204,6 +204,7 @@ nav a {
 }
 
 .box {
+  text-align: center;
   display: flex;
   width: 300px;
   padding: 2vh;
